--- a/React-Server/src/css/Login.css
+++ b/React-Server/src/css/Login.css
@@ -1,104 +1,102 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
 
-body{
+body {
   font-family: "Poppins", sans-serif;
-  background: url("../assets/bg.mp4");  
-  background-color: linear-gradient(green, blue);
-  background-size: cover;
-  background-position: center;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 100vh;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-}
-
-.Wrapper {
-  width: 420px;
-  background:rgba(0,0,0, 0.2);
-  border: 2px solid rgba(255, 255, 255, 0.2);
-  backdrop-filter: blur(2px);
-  box-shadow: 0 0 50px rgba(0, 0, 0,0.5);
-  color: rgba(0, 0, 0, 0.7);
-  border-radius: 10px;
-  padding: 30px 40px;
-  margin-left: -85%;
-  margin-right: auto;  
-}
-.Wrapper h1 {
-  font-size: 36px;
-  text-align: center;
-}
-.logo {
-  text-align: center;
-  margin-bottom: 20px;
-  border-radius: 50%;
-}
-.Logo-img {
-  border-radius: 50%;
-}
-
-.logo img {
-  width: 150px;
-  height: auto;
-}
-.Wrapper .Input-box {
-  position: relative;
-  width: 100%;
-  height: 50px;
-
-  margin: 30px 0;
-}
-.Input-box input {
-  height: 100%;
-  width: 100%;
-  background: transparent;
-  border: 2px solid rgba(0, 0, 0, 0.2);
-  outline: none;
-  border-radius: 40px;
   font-size: 16px;
+}
+
+.wrapper-container {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.wrapper {
+  background: rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
+
+  border-radius: 10px;
+  margin-right: 750px;
+  height: 500px;
+  width: 400px;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.wrapper form {
+  text-align: center;
+}
+
+.Logo-img {
+  width: 150px;
+}
+
+.main {
+  width: 100%;
+  height: 100vh;
+}
+
+video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.link {
   color: black;
-  padding: 20px 45px 20px 20px;
+  text-decoration: none;
+}
+
+.Input-box {
+  border: 2px solid rgba(0, 0, 0, 0.2);
+  border-radius: 30px;
+  margin-top: 20px;
+}
+
+h1 {
+  margin-bottom: 85px;
+}
+
+.Input-box input {
+  font-size: 16px;
+  border: none;
+  background: transparent;
+  outline: none;
+  color: black;
+  width: 300px;
+
+  padding: 15px 20px;
+}
+
+.Input-box .icon {
+  font-size: 16px;
+  margin-right: 30px;
+}
+
+.forgot a:active {
+  text-decoration: underline;
 }
 .Input-box input::placeholder {
   color: black;
 }
-.Input-box .icon {
-  position: absolute;
-  right: 20px;
-  top: 50%;
-  transform: translateY(-50%);
-  font-size: 16px;
-}
-.Wrapper .forgot {
-  text-align: end;
-  font-size: 14.5px;
-  margin: -15px 0 15px;
-}
-.forgot .link {
-  text-decoration: none;
-  color: black;
-  margin-right: 5px;
-}
-.forgot a:hover {
-  text-decoration: underline;
-}
-.Wrapper .login-button {
-  text-align: center;
-}
+
 .login-button button {
-  width: 50%;
-  height: 45px;
-  background: white;
   border: none;
-  outline: none;
-  border-radius: 40px;
-  box-shadow: 0 0 10px rgba(255, 255, 255, 0.2);
-  cursor: pointer;
-  font-size: 16px;
-  color: gray;
+  background: white;
   font-weight: 700;
-  margin-bottom: 25px;
+  color: gray;
+  height: 45px;
+  width: 50%;
+  border-radius: 40px;
+  margin-bottom: 15px;
 }
