--- a/React-Server/src/css/Login.css
+++ b/React-Server/src/css/Login.css
@@ -61,10 +61,7 @@ video {
   border: 2px solid rgba(0, 0, 0, 0.2);
   border-radius: 30px;
   margin-top: 20px;
-}
-
-h1 {
-  margin-bottom: 85px;
+  margin-bottom: 35px;
 }
 
 .Input-box input {
@@ -98,5 +95,9 @@ h1 {
   height: 45px;
   width: 50%;
   border-radius: 40px;
-  margin-bottom: 15px;
+  margin-bottom: 50px;
+}
+
+.forgot {
+  margin-bottom: 20px;
 }
