--- a/React-Server/src/pages/srDocDashboard/style/SearchResult.css
+++ b/React-Server/src/pages/srDocDashboard/style/SearchResult.css
@@ -6,6 +6,7 @@
     box-shadow: 0px 0px 8px #ddd;
     border-radius: 10px;
     margin-top: 1rem;
+    margin-left: 20px;
     max-height: 300px;
     overflow-y: scroll;
 }
