--- a/React-Server/src/pages/srDocDashboard/style/SrDrDashboard.css
+++ b/React-Server/src/pages/srDocDashboard/style/SrDrDashboard.css
@@ -1,20 +1,32 @@
 #logo img {
-    height: 70px;
-    width: 87px;
-    margin-top: -25px;
-    margin-left: -60px;
+  height: 70px;
+  width: 87px;
+  margin-top: -25px;
+  margin-left: -60px;
 }
-.container{
+.container {
   display: inline-flex;
   justify-content: flex-end;
+  align-items: flex-start;
 }
 #lg-button {
   float: right;
   margin-top: 3px;
   margin-right: 8px;
-  margin-left: auto; 
+  margin-left: auto;
 }
-.counsellor-list{
+.counsellor-list {
   display: flex;
   justify-content: space-between;
+  flex-grow: 1;
+}
+.wrapperSearchCounsellor{
+  margin-right: -150px;
+}
+.searchCounsellor{
+  display: flex;
+  flex-direction: column;
+  width: 350px;
+  align-self: flex-end; 
+  margin-left: auto;
 }
