side bar updated

--- a/React-Server/src/pages/srDocDashboard/style/Counsellor.css
+++ b/React-Server/src/pages/srDocDashboard/style/Counsellor.css
@@ -1,8 +1,8 @@
-
 .counsellor-container {
   background-color: #f0f0f0;
   padding: 20px;
   border-radius: 15px;
+  margin-top: 15px;
 }
 
 .card-container {
