--- a/React-Server/src/pages/srDocDashboard/style/Cards.css
+++ b/React-Server/src/pages/srDocDashboard/style/Cards.css
@@ -1,8 +1,6 @@
-/* .card_item {
-    padding: 15px 30px;
-    width: 24%;
-    text-align: center;
-  } */
+.card_item {
+    width: 300px;
+  }
 
 .card-container .card_item:hover {
   transform: scale(1.02);
