--- a/React-Server/src/pages/srDocDashboard/style/Counsellor.css
+++ b/React-Server/src/pages/srDocDashboard/style/Counsellor.css
@@ -1,16 +1,15 @@
 .counsellor-container {
   background-color: #f0f0f0;
-  padding: 20px;
+  width: 100%;
   border-radius: 15px;
-  margin-top: 10px;
+  padding-top: 25px;
+  padding-bottom: 25px;
 }
-
 .card-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
 }
-
 .card {
   margin: 10px;
 }
