--- a/React-Server/src/pages/srDocDashboard/style/SideBar.css
+++ b/React-Server/src/pages/srDocDashboard/style/SideBar.css
@@ -1,11 +1,6 @@
 .sidebar {
-    width: 10%;
     position: fixed;
     height: 100%;
-    /* border-right: 2px solid #e5e5e5; */
-    z-index: 3;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-right: 25px;
+    padding-left: 15px;
+    padding-top: 11px;
   }
