--- a/React-Server/src/pages/srDocDashboard/style/SrDrDashboard.css
+++ b/React-Server/src/pages/srDocDashboard/style/SrDrDashboard.css
@@ -1,44 +1,17 @@
-#logo img {
-  height: 70px;
-  width: 87px;
-  margin-top: -25px;
-  margin-left: -60px;
-}
-.srdocnavbar-header{
+.srdocnavbar-header {
   margin-bottom: 60px;
 }
-.container {
-  display: inline-flex;
-  justify-content: flex-end;
-  align-items: flex-start;
-}
-
-#lg-button {
-  float: right;
-  margin-top: 3px;
-  margin-right: 8px;
-  margin-left: auto;
+.outterbox {
+  margin-top: -15px;
 }
 .counsellor-list {
-  padding-top: 15px;
   display: flex;
   justify-content: space-between;
   flex-grow: 1;
 }
-.wrapperSearchCounsellor{
-  margin-right: -150px;
+.col-2{
+  padding-top: 40px;
 }
-.searchCounsellor{
-  display: flex;
-  flex-direction: column;
-  width: 350px;
-  align-self: flex-end; 
-  margin-left: auto;
-}
-/* .sidebar{
-  padding-top: 20px;
-} */
-
-body{
-  background: gray;
+.col-10{
+  padding: 60px 40px 60px 60px;
 }
