--- a/React-Server/src/pages/Patients/Login.css
+++ b/React-Server/src/pages/Patients/Login.css
@@ -1,119 +1,130 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
 
 body {
-  font-family: "Poppins", sans-serif;
-  margin: 0;
-  padding: 0;
-  font-size: 16px;
+    font-family: "Poppins", sans-serif;
+    margin: 0;
+    padding: 0;
+    font-size: 16px;
 }
 
 .wrapper-container {
-  position: absolute;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .wrapper {
-  background: rgba(0, 0, 0, 0.2);
-  box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
+    background: rgba(0, 0, 0, 0.2);
+    box-shadow: 0 0 50px rgba(0, 0, 0, 0.5);
 
-  border-radius: 10px;
-  margin-right: 750px;
-  height: 500px;
-  width: 400px;
+    border-radius: 10px;
+    margin-right: 750px;
+    height: 500px;
+    width: 400px;
 
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .wrapper form {
-  text-align: center;
+    text-align: center;
 }
 
 .Logo-img {
-  width: 150px;
+    width: 150px;
 }
 
 .main {
-  width: 100%;
-  height: 100vh;
+    width: 100%;
+    height: 100vh;
 }
 
 video {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .link {
-  color: black;
-  text-decoration: none;
+    color: black;
+    text-decoration: none;
 }
 
 .Input-box {
-  border: 2px solid rgba(0, 0, 0, 0.2);
-  border-radius: 30px;
-  margin-top: 20px;
-  margin-bottom: 35px;
+    border: 2px solid rgba(0, 0, 0, 0.2);
+    border-radius: 30px;
+    margin-top: 20px;
+    margin-bottom: 35px;
 }
 
 .Input-box input {
-  font-size: 16px;
-  width: 300px;
-  border: none;
-  background: transparent;
-  outline: none;
-  color: black;
+    font-size: 16px;
+    width: 300px;
+    border: none;
+    background: transparent;
+    outline: none;
+    color: black;
 
-  padding: 15px 20px;
+    padding: 15px 20px;
 }
 
 .Input-box .icon {
-  font-size: 16px;
-  margin-right: 30px;
+    font-size: 16px;
+    margin-right: 30px;
 }
 
 .forgot a:active {
-  text-decoration: underline;
+    text-decoration: underline;
 }
 .Input-box input::placeholder {
-  color: black;
+    color: black;
 }
 
 .login-button button {
-  border: none;
-  background: white;
-  font-weight: 700;
-  color: gray;
-  height: 45px;
-  width: 50%;
-  border-radius: 40px;
-  margin-bottom: 50px;
+    border: none;
+    background: white;
+    font-weight: 700;
+    color: gray;
+    height: 45px;
+    width: 50%;
+    border-radius: 40px;
+    margin-bottom: 50px;
 }
 
-.forgot {
-  margin-bottom: 20px;
+.state-selection {
+    padding: 0px;
+    width: auto;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    align-items: center;
+    padding: 10px; /* Add padding for spacing */
+    border: 2px solid rgba(0, 0, 0, 0.2);
+    border-radius: 40px; /* Add border radius for rounded corners */
+    display: inline-flex;
+    width: 350px;
 }
 
-
-.label-option{
-  margin: auto;
-  margin-top: 20px;
-  margin-bottom: 20px;
+/* Select dropdown style */
+.statesDropDown {
+    width: 100%;
+    padding: 8px;
+    border: 2px solid rgba(0, 0, 0, 0.2);
+    border-radius: 30px;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+    font-size: 14px;
+    outline: none; /* Remove outline on focus */
+    border-radius: 40px;
 }
 
-.state-button{
-  border: 2px solid rgba(0, 0, 0, 0.2);
-  border-radius: 30px;
-  margin-top: 20px;
-  margin-bottom: 35px;
-  font-size: 16px;
-  width: auto;
+/* Hover effect for options */
+.statesOption:hover {
+    background-color: #e0e0e0;
 }
