--- a/React-Server/src/pages/patientDialer/NavigationBar.css
+++ b/React-Server/src/pages/patientDialer/NavigationBar.css
@@ -2,4 +2,6 @@
     width: 150px;
     background-color: aliceblue;
     color: black;
+    box-shadow: 0px 0px 1px 1px rgb(190, 181, 181);
+    /* max-width: 150px; */
 }
