--- a/React-Server/src/pages/srDocDashboard/style/Cards.css
+++ b/React-Server/src/pages/srDocDashboard/style/Cards.css
@@ -2,6 +2,12 @@
   width: 300px;
 }
 
+.status {
+  height: 10px;
+  width: 100%;
+  border-radius: 3px;
+  margin-top: 0px;
+}
 .card-container .card_item:hover {
   transform: scale(1.02);
   transition: transform 0.3s;
