Add Image Download Integration for Frontend

--- a/React-Server/src/pages/admin/dashboard/Cards.css
+++ b/React-Server/src/pages/admin/dashboard/Cards.css
@@ -8,11 +8,11 @@
   cursor: pointer;
 }
 
-.card_inner {
+.card_inner_doctor {
   text-align: center;
   background: rgba(253, 253, 253, 0.808);
   border-radius: 10px;
-  padding: 35px 20px;
+  padding: 20px 20px;
   min-width: 250px;
   min-height: 315px;
   max-height: 370px;
