--- a/React-Server/src/pages/counsellorDashboard/todoStyle.css
+++ b/React-Server/src/pages/counsellorDashboard/todoStyle.css
@@ -1,61 +1,60 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
 .TodoWrapper {
-  background: #bfbfe3;
-  margin-top: 5rem;
-  padding: 2rem;
-  border-radius: 5px;
-  width: 410px;
+    background: white;
+    margin-top: 5rem;
+    padding: 2rem;
+    border-radius: 5px;
+    width: 410px;
 }
 
 .TodoForm {
-  width: 100%;
+    width: 100%;
 }
 
 .todo-input {
-  outline: none;
-  background: none;
-  border: 1px solid #8758ff;
-  padding: 0.5rem 1rem;
-  margin-top: 1rem;
-  margin-bottom: 2rem;
-  width: 250px;
-  color: #0c0b0b;
+    outline: none;
+    background: none;
+    border: 1px solid #8758ff;
+    padding: 0.5rem 1rem;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+    width: 250px;
+    color: #0c0b0b;
 }
 
 .todo-input::placeholder {
-  color: #0000004d;
+    color: #0000004d;
 }
 
 .todo-btn {
-  background: #8758ff;
-  color: #fff;
-  border: none;
-  padding: 0.55rem;
-  cursor: pointer;
-  
+    background: #8758ff;
+    color: #fff;
+    border: none;
+    padding: 0.55rem;
+    cursor: pointer;
 }
 
 .Todo {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background: #8758ff;
-  color: #fff;
-  padding: 0.75rem 1rem;
-  border-radius: 5px;
-  margin-bottom: 1rem;
-  cursor: pointer;
-  width: 335px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #8758ff;
+    color: #fff;
+    padding: 0.75rem 1rem;
+    border-radius: 5px;
+    margin-bottom: 1rem;
+    cursor: pointer;
+    width: 335px;
 }
 
 .fa-trash {
-  margin-left: 0.75rem;
+    margin-left: 0.75rem;
 }
 
 .completed {
-  color: #c5aeff;
-  text-decoration: line-through;
+    color: #c5aeff;
+    text-decoration: line-through;
 }
 
 #userTodo {
@@ -63,4 +62,3 @@
     font-size: 20px;
     margin-bottom: 3px;
 }
- 
