--- a/React-Server/src/pages/counsellorDashboard/rStyle.css
+++ b/React-Server/src/pages/counsellorDashboard/rStyle.css
@@ -10,6 +10,11 @@
     margin-left: 10px;
 }
 
+.emailIcons {
+    height: 30px;
+    width: 30px;
+}
+
 #pieCard {
     width: 400px;
     border: 0px;
