--- a/React-Server/src/pages/srDocDashboard/style/Cards.css
+++ b/React-Server/src/pages/srDocDashboard/style/Cards.css
@@ -2,12 +2,25 @@
   width: 300px;
 }
 
+.containers{
+  min-height: 350px;
+  margin: 10px;
+}
+
 .status {
   height: 10px;
   width: 100%;
   border-radius: 3px;
   margin-top: 0px;
+  position: absolute;
+  left: 0;
+  top: 0;
 }
+
+.card_inner{
+  position: relative;
+}
+
 .card-container .card_item:hover {
   transform: scale(1.02);
   transition: transform 0.3s;
@@ -65,9 +78,21 @@
   height: 45px;
   width: 45%;
   border-radius: 40px;
-  margin-bottom: 50px;
+  /* margin-bottom: 10px;
+  display: inline-block; */
 }
 .join {
   background: rgb(251, 90, 90);
   margin-left: 9px;
+}
+
+
+.fallback_div{
+  border: none;
+  /* background: rgb(174, 255, 124); */
+  font-weight: 700;
+  color: gray;
+  height: 45px;
+  width: 45%;
+  border-radius: 40px;
 }
