--- a/React-Server/src/pages/srDocDashboard/style/Counsellor.css
+++ b/React-Server/src/pages/srDocDashboard/style/Counsellor.css
@@ -1,15 +1,16 @@
 .counsellor-container {
-  background-color: #f0f0f0;
-  width: 100%;
-  border-radius: 15px;
-  padding-top: 25px;
-  padding-bottom: 25px;
+	background-color: #f0f0f0;
+	width: 100%;
+	border-radius: 15px;
+	padding-top: 25px;
+	padding-bottom: 25px;
 }
 .card-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-around;
-}
-.card {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-around;
   margin: 10px;
 }
+/* .card {
+	margin: 10px;
+} */
