--- a/React-Server/src/pages/inCall/inCallStyle.css
+++ b/React-Server/src/pages/inCall/inCallStyle.css
@@ -2,6 +2,16 @@
 margin: 20px 60% auto 20px;
 } */
 
+#logoInCall {
+  height: 90px;
+  width: 90px;
+  margin-top: -20px;
+}
+
+.mArea {
+  margin-top: 30px;
+}
+
 .cards {
     margin: 10px;
     /* background: rgba(255, 255, 255, 0.5); */
@@ -30,6 +40,7 @@ margin: 20px 60% auto 20px;
     background: url(../../assets/photo-1508614999368-9260051292e5.webp);
     background-repeat: no-repeat;
     background-size: cover;
+    height: 850px;
 }
 
 .dx-list-item-content > div {
@@ -62,4 +73,73 @@ margin: 20px 60% auto 20px;
     max-width: 350px;
     width: 100%;
   }
-  
+
+  a {
+    text-decoration: none;
+  }
+
+  .button {
+  line-height: 1;
+  text-decoration: none;
+  display: inline-flex;
+  align-items: center;
+  gap: .75rem;
+  background-color: var(--clr);
+  color: #fff;
+  border-radius: 10rem;
+  font-weight: 600;
+  padding: .55rem 0.8rem;
+  padding-left: 12px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  transition: background-color .3s;
+}
+
+.button__icon-wrapper {
+  flex-shrink: 0;
+  width: 25px;
+  height: 25px;
+  position: relative;
+  color: var(--clr);
+  background-color: #fff;
+  border-radius: 50%;
+  display: grid;
+  place-items: center;
+  overflow: hidden;
+}
+
+.button:hover {
+  background-color: #000;
+}
+
+.button:hover .button__icon-wrapper {
+  color: #000;
+}
+
+.button__icon-svg--copy {
+  position: absolute;
+  transform: translate(-150%, 150%);
+}
+
+.button:hover .button__icon-svg:first-child {
+  transition: transform .3s ease-in-out;
+  transform: translate(150%, -150%);
+}
+
+.button:hover .button__icon-svg--copy {
+  transition: transform .3s ease-in-out .1s;
+  transform: translate(0);
+}
+
+#contactSD {
+  margin-left: 27px;
+  margin-right: 15px;
+  margin-top: 10px;
+}
+
+#callBack {
+  margin-left: 25px;
+  margin-right: 15px;
+  margin-top: 10px;
+}
