counsellor dashboard in call updates

--- a/React-Server/src/pages/Patients/Login.css
+++ b/React-Server/src/pages/Patients/Login.css
@@ -128,3 +128,9 @@ video {
 .statesOption:hover {
     background-color: #e0e0e0;
 }
+
+#userIcon {
+    margin-top: -34px;
+    margin-bottom: 20px;
+    margin-left: 15px;
+}
